apps/demo-app/greeting-service/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-service
  labels:
    component: greeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: greeting-service
  template:
    metadata:
      labels:
        component: greeting-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/node-group
                operator: In
                values:
                - rpi
      containers:
      - name: greeting-service
        image: nexus.gillouche.homelab/docker-hosted/demo-app/greeting-service
        command: ["/usr/local/bin/python"]
        args: ["/app/main.py"]
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
