apps/demo-app/greeting-service/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
  labels:
    app: demo-app
    component: greeting-service
spec:
  type: ClusterIP
  selector:
    component: greeting-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
